[cxx] Add g::type_traits::is_mempool_safe<T> type trait
The trait has a value member equal to true iff it is safe to allocate T in a
mempool.

Because mono mempools don't run destructors, we can only put trivially
destructible types into mempools.

--- a/mono/eglib/Makefile.am
+++ b/mono/eglib/Makefile.am
@@ -57,7 +57,8 @@ libeglib_la_SOURCES = \
 
 EXTRA_libeglib_la_SOURCES = \
 	gxx-alloc.hpp	\
-	gxx-base.hpp
+	gxx-base.hpp	\
+	gxx-traits.hpp
 
 CFLAGS := $(filter-out @CXX_REMOVE_CFLAGS@, @CFLAGS@) @CXX_ADD_CFLAGS@
 
